--- a/src/epub/text/endnotes.xhtml
+++ b/src/epub/text/endnotes.xhtml
@@ -683,7 +683,10 @@
 							<span>The meanest saint <em>shall</em> win the day.”</span>
 						</p>
 					</blockquote>
-					<p><cite>—⁠Editor</cite> <a href="part-1.xhtml#noteref-183" epub:type="backlink">↩</a></p>
+					<p>
+						<cite>—⁠Editor</cite>
+						<a href="part-1.xhtml#noteref-183" epub:type="backlink">↩</a>
+					</p>
 				</li>
 				<li id="note-184" epub:type="endnote">
 					<p>Numbers 13. <a href="part-1.xhtml#noteref-184" epub:type="backlink">↩</a></p>
@@ -2351,7 +2354,10 @@
 							<span>The meanest saint shall win the day.”</span>
 						</p>
 					</blockquote>
-					<p><cite>—⁠Editor</cite> <a href="part-2.xhtml#noteref-634" epub:type="backlink">↩</a></p>
+					<p>
+						<cite>—⁠Editor</cite>
+						<a href="part-2.xhtml#noteref-634" epub:type="backlink">↩</a>
+					</p>
 				</li>
 				<li id="note-635" epub:type="endnote">
 					<p>Strive to enter in; a whole Heaven and eternal life is wrapped up in this little word <em>in</em>. Strive; this calls for the mind and heart. Many professors make their striving to stand rather in an outcry of words, than in a hearty labour against the lusts and love of the world, and their own corruptions. But this kind of striving is but a beating the air, and will come to nothing at last. <cite>—⁠Bunyan’s <i epub:type="se:name.publication.book">Strait Gate</i>, <abbr>vol.</abbr> 1, <abbr>p.</abbr> 869</cite> <a href="part-2.xhtml#noteref-635" epub:type="backlink">↩</a></p>
@@ -2581,7 +2587,10 @@
 							<span>Hung up, because holy ways they did decline.</span>
 						</p>
 					</blockquote>
-					<p><cite>—⁠Editor</cite> <a href="part-2.xhtml#noteref-695" epub:type="backlink">↩</a></p>
+					<p>
+						<cite>—⁠Editor</cite>
+						<a href="part-2.xhtml#noteref-695" epub:type="backlink">↩</a>
+					</p>
 				</li>
 				<li id="note-696" epub:type="endnote">
 					<p>God, as it were, gibbets some professors, and causes their names and characters to be publicly exhibited, as a terror to others, and as a warning to His own people. <cite>—⁠Mason</cite> The dreadful falls and awful deaths of some professors are to put others upon their guard against superficial, slothful, and presumptuous hopes. The real occasion of turning aside lies in the concealed lusts of the heart. <cite>—⁠Scott</cite> <a href="part-2.xhtml#noteref-696" epub:type="backlink">↩</a></p>
@@ -3447,7 +3456,10 @@
 						</p>
 						<cite>—⁠P. 37</cite>
 					</blockquote>
-					<p><cite>—⁠Editor</cite> <a href="part-2.xhtml#noteref-944" epub:type="backlink">↩</a></p>
+					<p>
+						<cite>—⁠Editor</cite>
+						<a href="part-2.xhtml#noteref-944" epub:type="backlink">↩</a>
+					</p>
 				</li>
 				<li id="note-945" epub:type="endnote">
 					<p>This doubtless is meant to intimate, that in times of great anxiety, and in prospect of seasons of difficulty, Christians desire above all things the special supports and consolations of the Word of God. <cite>—⁠Ivimey</cite> <a href="part-2.xhtml#noteref-945" epub:type="backlink">↩</a></p>
@@ -3509,7 +3521,10 @@
 						</p>
 						<cite>—⁠<i epub:type="se:name.publication.book">One Thing Needful</i>, <abbr>ver.</abbr> 69, 71</cite>
 					</blockquote>
-					<p><cite>—⁠Editor</cite> <a href="part-2.xhtml#noteref-957" epub:type="backlink">↩</a></p>
+					<p>
+						<cite>—⁠Editor</cite>
+						<a href="part-2.xhtml#noteref-957" epub:type="backlink">↩</a>
+					</p>
 				</li>
 				<li id="note-958" epub:type="endnote">
 					<p>A sound Christian is not afraid to be examined, and sifted to the bottom, for he can give reason of the hope that is in him. He knows why and wherefore he commenced his pilgrimage. <cite>—⁠Mason</cite> <a href="part-2.xhtml#noteref-958" epub:type="backlink">↩</a></p>
