Correcting reported typos and incorrect dashes

--- a/src/epub/text/part-2.xhtml
+++ b/src/epub/text/part-2.xhtml
@@ -749,7 +749,7 @@
 			<p>The next they brought up, was a bottle of wine, red as blood.<a href="endnotes.xhtml#note-870" id="noteref-870" epub:type="noteref">870</a> So Gaius said to them, Drink freely; this is the juice of the true vine, that makes glad the heart of God and man.<a href="endnotes.xhtml#note-871" id="noteref-871" epub:type="noteref">871</a> So they drank and were merry.</p>
 			<p>The next was a dish of milk well crumbed; but Gaius said, Let the boys have that, that they may grow thereby.<a href="endnotes.xhtml#note-872" id="noteref-872" epub:type="noteref">872</a> Then they brought up in course a dish of butter and honey. Then said Gaius, Eat freely of this; for this is good to cheer up, and strengthen your judgments and understandings. This was our Lord’s dish when He was a child: “Butter and honey shall He eat, that He may know to refuse the evil, and choose the good.”<a href="endnotes.xhtml#note-873" id="noteref-873" epub:type="noteref">873</a></p>
 			<p>Then they brought them up a dish of apples, and they were very good tasted fruit. Then said Matthew, May we eat apples, since they were such, by, and with which, the serpent beguiled our first mother?</p>
-			<p>Then said Gaius-</p>
+			<p>Then said Gaius—</p>
 			<blockquote epub:type="z3998:verse">
 				<p>
 					<span>Apples were they with which we were beguil’d</span>
