Add missing roman semantics to monarch

--- a/src/epub/text/endnotes.xhtml
+++ b/src/epub/text/endnotes.xhtml
@@ -3409,7 +3409,7 @@
 					<p>This is the work and aim of every faithful minister of Christ, to destroy Giant Despair, and demolish Doubting Castle, in the hearts of God’s children. A more awful character is not in the world, than the man who assumes the ministerial name and character, without understanding the nature of that ministry of reconciliation which is committed to everyone who is really called and sent of God. <cite>—⁠<abbr epub:type="z3998:given-name">J. B.</abbr></cite> <a href="part-2.xhtml#noteref-931" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-932" epub:type="endnote">
-					<p>“The wain,” seven bright stars in the constellation of Ursa Major, called by country people, the plough, or the wain, or Charles I’s chariot. <cite>—⁠Editor</cite> <a href="part-2.xhtml#noteref-932" epub:type="backlink">↩</a></p>
+					<p>“The wain,” seven bright stars in the constellation of Ursa Major, called by country people, the plough, or the wain, or Charles <span epub:type="z3998:roman">I</span>’s chariot. <cite>—⁠Editor</cite> <a href="part-2.xhtml#noteref-932" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-933" epub:type="endnote">
 					<p>Matthew 25:40. <a href="part-2.xhtml#noteref-933" epub:type="backlink">↩</a></p>
